kubernetes-manifests/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin-container
        image: dpage/pgadmin4
        ports:
        - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  ports:
#    - port: 5050
#  - protocol: TCP
  - port: 5050
    targetPort: 5050
  selector:
    app: pgadmin
